--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -105,70 +105,80 @@ For a co-robot to interact as a productive member of a team, it must be able to 
 \section{Definition of Problem Space}
 \label{sec:pspace}
 %1. Technically define the problem space being utilized, framed as the same data structure that can be leveraged for executing these actions. 
-The agent and operating environment are represented by a continuous-state, continuous-time Semi-Markov decision process, defined by the tuple $(S,A,\mathbb{P},\Lambda,\gamma,D,R)$, where $S$ represents a continuous set of states, $A$ is a set of actions, $\mathbb{P}$ is a set of policies referred to as primitive actions, $\Lambda$ is a set of $\epsilon-$neighborhoods defined for readings from each input sensor comprising the state descriptor, $\gamma \in [0,1)$ as a discount factor, $D$ is the initial-state distribution, and $R : S \times A \rightarrow \mathbb{R}$ is an unknown state-action reward function. This data structure is representative of those commonly utilized within skill training and execution systems. We further define $S \rightarrow \mathbb{R}^k$ for $k$ sensor values.
+%2. Formalize SMDP being used, and each skill representation as a QLearner. Use Ng paper as a basis for this. Also include extra metadata being considered, such as time-to-execute and tolerance variables
+%3. Define policy in terms of the exploration function being utilized, explain that this function can be swapped depending on the agent's goals.
+% 4. Define linear combination of policies (reward layers)
+% 5. Define the optimal policy in terms of the training data being input
+% 6. Define MDP state vector as being a composite of disparate sensor data -- different refresh rates
+The agent and operating environment are represented by a continuous-state, continuous-time Semi-Markov decision process, defined by the tuple $(S,A,\mathbb{P},\Lambda,\gamma,D,R)$, where $S$ represents a continuous set of states, $A$ is a set of actions, $\mathbb{P}$ is a set of policies referred to as primitive actions, $\Lambda$ is a set of $\epsilon-$neighborhoods defined for readings from each input sensor comprising the state descriptor, $\gamma \in [0,1)$ as a discount factor, $D$ is the initial-state distribution, and $R : S \times A \rightarrow \mathbb{R}$ is an unknown state-action reward function. This data structure is representative of those commonly utilized within skill training and execution systems. We further define $S \rightarrow \mathbb{R}^k$ for $k$ sensor inputs.
 
 We assume the agent holds limited a priori knowledge of a set of primitive skills $\mathbb{P}$, each describing a policy $P_\pi$ for traversing the agent-environment SMDP. Each primitive action contains its own exploration function, $P_e$, to guide its traversal while solving for known branches of the problem-space MDP. Additionally, each primitive $p \in P$ contains metadata indicating the estimated time required for completion of the primitive $P_t$. Completion of a primitive action is defined as traversing state space from an unknown initial state to with the $\epsilon-$neighborhood of a known goal state.
 
 Each policy $P_\pi$ can be described as a series of decision rules to be applied when appearing in familiar situations. These decisions may range from complete deterministic to randomized, and are influenced by the exploration function $P_e$. Within each primitive, we introduce the notion of reward layers, able to be utilized to influence exploration transition probabilities but not artifically affect reward signal propagation.
 
-Our work does not assume a uniform sensor refresh rate, as a state sampled at a given time may represent stale data from a subset of its input sensors. The algorithm presented has shown robustness to lossy sampling by remaining capable of confidently classifying observations under such conditions.
+Our environment definition does not assume a uniform sensor refresh rate, as states may be sampled with stale data from a subset of its input sensors. The algorithm presented has shown robustness to lossy and noisy sampling by remaining capable of confidently classifying observations under such conditions within our proof-of-concept implementation.
 
-% opportunistic inverse reinforcement learning as applied to skill recognition. 
-% Field robotics operates within a continuous-space Markov decision process
-
-%2. Formalize SMDP being used, and each skill representation as a QLearner. Use Ng paper as a basis for this. Also include extra metadata being considered, such as time-to-execute and tolerance variables
-
-%3. Define policy in terms of the exploration function being utilized, explain that this function can be swapped depending on the agent's goals.
-
-% 4. Define linear combination of policies (reward layers)
-
-% 5. Define the optimal policy in terms of the training data being input
-
-% 6. Define MDP state vector as being a composite of disparate sensor data -- different refresh rates
-% 7. Self-loops permitted but do not contribute reward
-
-
-\section{Primitive Recognition Algorithm}
+\section{Primitive Action Recognition}
+\subsection{Algorithm Specification}
 \label{sec:recognition}
-1. Re-iterate problem: Given a sample demonstration, we seek to determine which known skill is being presented (if any),
-                       if it should be considered an expert demonstration, and to use the new observation to simultaneously
-                       improve recognition of the action as well as improve its execution potential.
+%1. Re-iterate problem: Given a sample demonstration, we seek to determine which known skill is being presented (if any),
+%                       if it should be considered an expert demonstration, and to use the new observation to simultaneously
+%                       improve recognition of the action as well as improve its execution potential.
+%2. Unlike solving the skill execution problem, the algorithm does not have explicit control over the policy being enacted over the state space.
+%3. Unlike the direct inverse reinforcement learning problem, there are multiple primitive candidates and the demonstration given cannot be assumed to be an example/training data for any of them.
+Given a continuous feed of sensor inputs, we seek to determine if skills known to the agent are being demonstrated. We utilize our SMDPs, constructed for skill execution, to estimate whether or not the incoming information can applicably benefit the agent's understanding of its known primitive actions. The algorithm utilized for opportunistic inverse reinforcement learning when there exist multiple possible affected policies is as follows:
+\begin{enumerate}
+\item
+Poll each sensor to generate a composite state descriptor vector, $s \in \mathbb{R}^k$.
+\item
+For each $P \in \mathbb{P}$:
+\item
+Initialize $P_{\mathrm{hit}} = \{\varnothing\}$, to be populated with observed input states possessing non-zero action-reward values from incoming transitions originating at the previously observed world state. Previously unobserved states within the $\epsilon-$neighborhood of known states are given copies of incoming and outgoing action-reward transitions of these 'nearby' states, with reward values weighted inversely proportional to distance in $\mathbb{R}^k$.
+\item
+If the duration represented between $P_{\mathrm{hit}}[0]$ and the current time is greater than a defined tolerance constant $t_1 * P_t$: pop hit states off the front of the set until the duration $d$ satisfies $d \leq t_1*P_t$ seconds.
+\item
+Continue to the next primitive $P \in \mathbb{P}$ if either the duration $d$ represented within $P_{\mathrm{hit}}$ fails to satisfy $d \geq 1/t_1 * P_t$ or if the density of $P_{\mathrm{hit}}$ is less than a predefined accuracy constant $a_1$.
+\item
+For a pre-specified neighborhood-distance relaxation constant $d_g \in [1,\infty)$, if the currently observed state is within the $(d_g * \epsilon)-$neighborhood of a known expert-trained goal state:
 
-2. Unlike solving the skill execution problem, the algorithm does not have explicit control over the policy being enacted over the state space.
+Compute a confidence $C_P \in [0,1]$ representing likelihood that $P_{\mathrm{hit}}$ is an example of $P$.
+$$C_P = \alpha_1*\mathrm{pathlen}_{a} + \alpha_2*\mathrm{pathlen}_{o} + \alpha_3* \frac{\bar{R}_{\mathrm{actual}}}{\bar{R}_{\mathrm{optimist}}} + \alpha_4*R_{\mathrm{actual}} $$
+subject to the constraint
+$$\sum_{i=0}^{4}\alpha_i = 1.0 $$
 
-3. Unlike the direct inverse reinforcement learning problem, there are multiple primitive candidates and the demonstration given cannot be assumed to be an example/training data for any of them.
+	\begin{enumerate}
+	\item
+	Generate an 'optimistic' policy $\pi_o$. This is accomplished by adding states from $P_{\mathrm{hit}}$ into set $W_p$ with probability $p_{wp}$. For each state in $W_p$, modify all incoming action-reward transitions by adding a "waypoint" reward bonus $w$ to bias towards generating policies favoring transitions through waypointed states. We utilize these policies of idealized traversal for reward propagation, encouraging the agent to traverse similar paths during action execution, influencing the agent's behaviors through observations of its peers.
+	\item
+	Compute a path through MDP-space according to the optimistic policy, beginning at state $P_{\mathrm{hit}}[0]$, terminating when within a reduced $\epsilon-$neighborhood of an expert-trained goal state in $P$ or when no outgoing transitions remain. We define $\bar{R}_{\mathrm{optimist}}$ as the mean transition reward sustained throughout the execution of $\pi_o$.
+	\item
+	Repeat (b), following a policy closely resembling the observed data, $\pi_a$. We define $\bar{R}_{\mathrm{actual}}$ as the mean transition reward sustained throughout the execution of $\pi_a$.
+	\item
+	Compute $\mathrm{pathlen}_{a} = 1 - ($(sampling rate) $ * $ (length of path from $\pi_a$)$ - P_t) / P_t$
 
-4. Describe Algorithm:
+	Compute $\mathrm{pathlen}_{o} = 1 - ($(sampling rate) $ * $ (length of path from $\pi_o$)$ - P_t) / P_t$
+	\end{enumerate}
+\item
+Apply a (score,label) tuple to each frame of input data represented within $P_{\mathrm{hit}}$.
+\item
+Given a high-confidence threshold $h_c$, if $C_P \geq h_c$:
+\begin{enumerate}
+\item
+Permanently apply additional reward coefficient $\beta_{\mathrm{reward}} \in [1.,\infty)$ to reward values of all action-reward transitions utilized in the traversal through $\pi_a$.
+\item
+Set  $P_{\mathrm{hit}} = \{ s_i | \{s_i \in P_{\mathrm{hit}}\} \cap \{ i > |P_{\mathrm{hit}}|/2 \} \}$
+\end{enumerate}
+\end{enumerate}
+\subsection{Details and Analysis}
+\label{sec:recognition_analysis}
+Our algorithm allows a spectating agent to generate a segmented timeline of actions from those partially trained within its internal repository. The agent is then able to fully capitalize on these examplars within its existing hierarchical framework by identifying possible expert examples to process as training data. The algorithm leverages particularly strong demonstrations to propagate what is perceived as the most beneficial reward signals while processing the identification step, contributing towards converging on an optimal execution policy. This synthesis of action recognition and inverse reinforcement learning does not demand any additional resources or training beyond what is required for basic primitive execution proficiency.
 
-	*At the specified sampling rate, poll all sensors to create a state descriptor.
-	*Iterate through all eligible primitive actions:
-		* If transition from previous state to this state is defined and has a positive reward, add to hit states
-		  otherwise if it isn't and the sliding window, of size = antipicated duration * tolerance * sampling rate, contains less
-		  than X percent hit states, we time-out the primitive as an optimization step, resetting its sliding window size to 0.
-		* If the current state is within an e-neighborhood of an explicitly trained goal state (don't use intuited goal states,
-		  otherwise the goal area will creep outwards):
-			* For each hit state:
-				* With probability p, designate current hit state as a waypoint. Add a waypoint policy that heavily favors
-				  transitions to this state from all other eligible states.
-			* Compute A, the percentage of hit states within the window.
-			* Beginning with the first hit state, compute B: the expected mean transition reward from following the waypoint policy through to a goal state. Known as the "realistic path".
-			* Beginning with the first hit state, compute C: the expected mean transition reward from following an optimal policy through to a goal state. Known as the "optimistic path".
-			* Compute D, the duration elapsed when traversing the realistic path, assuming a consistent sampling rate
-			* Compute E, the expected duration of an ideal example of skill execution
-			* Compute F, the mean transition reward for following an optimal policy through the state space fitting the duration requirements.
-
-			* Compute the confidence score: $0.25A + 0.4B/C + 0.1D/E + 0.25B/F$
-			* Apply a <score,label> tuple to each frame of data within the sliding window.
-
-
-
-5. Analyze Algorithm:
-
-	* Guards against failure
-	* Guards against exponential state/transition growth
-	* Benefits to execution side of the action primitives being trained
-	* What happens with misclassification -- robustness against slippery-slope failure mode
-	* Execution time required per primitive? How does the time requirement scale as primitives are added?
+%5. Analyze Algorithm:
+%	* Guards against failure
+%	* Guards against exponential state/transition growth
+%	* Benefits to execution side of the action primitives being trained
+%	* What happens with misclassification -- robustness against slippery-slope failure mode
+%	* Execution time required per primitive? How does the time requirement scale as primitives are added?
 
 \section{Experimental Setup}
 \label{sec:experiment}
@@ -206,8 +216,7 @@ observation to continue to shape actionable policies.
 While work partially overlapping our goals has been published previously
 \cite{LearningBehaviorFusion}, our work differs substantially in terms of both
 our algorithm and the resulting simultaneous benefit to observation
-classification and action execution. The problem of hierarchy assignment is
-left for other methods to more fully explore.
+classification and action execution. By categorizing observations into a timeline, a robotic agent may also build a hierarchy by applying subsequence recognition to the algorithm's output. This construction provides an concise, communicable plan for any observed Task. The problem of hierarchy assignment is left for other methods to more fully explore.
 
 Another issue that is left unexplored in this discussion is that of garbage collection.  As we discuss, a crucial part of the algorithm provided is to limit the window of comparison to the length of the recorded primitive plus some epsilon, enabling its feasibility for use as an online algorithm.  However, a separate measure of the ``leanness'' of the algorithm is the amount of memory it consumes.  Currently, every observed state is added to an action's representative MDP, and it is connected to all possible neighboring states via interpolation.  This could easily lead to a ``state space explosion,'' where the primitive skills each contained an enormous amount of unnecessary states in their MDP.  This problem could be solved cursorily by providing a garbage-collector thread that continuously removes states with transitions whose values are below some threshold $\tau$.
 
@@ -219,6 +228,9 @@ Furthermore, it is crucial that this system be deployed in a complex, collaborat
 We have presented herein a method for action recognition that simultaneously leverages an existing representation of primitive skills and improves the accuracy with which those skills can be performed by the observer.  This real-time recognition of learned actions is essential for any co-robot to be able to cooperate effectively in a multi-human multi-robot environment.
 
 Other works have offered solutions to many of the challenges standing in the way of mainstreaming collaborative robotics, including automating option scaffolding through demonstration \cite{AutoSkillAcquisition}, acquiring skills utilizing human reward signals in place of \cite{TAMER} or in addition to \cite{TeacherRL} a traditional objective function, and correcting for critical omissions in non-expert demonstrations \cite{PerspectiveTaking}. Simplifying the human trainer/robot student interaction paradigm by shaping human guidance into usable forms is also rapidly advancing \cite{TAMER,Clicker,AdviceTaking,TeacherRL,DemonstrationRL}. These successful results strongly contribute to the widespread use of Q-Learning variants in real robotic systems and, more generally, to the feasibility of real-time human-robot collaboration.
+
+
+% opportunistic inverse reinforcement learning as applied to skill recognition. 
 
 \section{Acknowledgements}
 \label{sec:acknowledgements}
